@@ -1,3 +1,8 @@
+2003-05-07  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* dynhelp.tcl (DynamicHelp::_motion_balloon): correctly listify
+	after delayed _show_help callback.
+
 2003-05-06  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* scrollw.tcl (ScrolledWindow::setwidget): remove any existing
